--- a/ASFT/ASFT/Pages/IssuePage.xaml
+++ b/ASFT/ASFT/Pages/IssuePage.xaml
@@ -40,14 +40,13 @@
                         <TapGestureRecognizer Command="{Binding OnGoToListCommand}" NumberOfTapsRequired="1" />
                     </Label.GestureRecognizers>
                 </Label>
-                <Label Text="{Binding LocationText}"/>
+                <Label Text="{Binding LocationText}" TextColor="Black"/>
             </StackLayout>
         </Grid>
 
 
         <ScrollView Grid.Column="0" Grid.Row="1" Orientation="Vertical" VerticalOptions="FillAndExpand">
-            <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
-                         Spacing="15" Padding="0,30,0,0">
+            <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Spacing="15" Padding="0,30,0,0">
 
                 <!--Category-->
                 <Label Text="CATEGORY"  HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
@@ -76,18 +75,12 @@
                 <!--PictureGallery-->
                 <Label Text="IMAGES" HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
                        Style="{StaticResource Labelfont}" TextColor="White" />
-                <Grid>
-                    <Grid.BindingContext>
-                        <pageModels:ImageGalleryPageModel />
-                    </Grid.BindingContext>
+                <Grid BindingContext="{Binding ImageGalleryViewModel}">
 
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
                         <RowDefinition Height="128" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Image Source="{Binding PreviewImage}" Grid.Row="2" BackgroundColor="#F4F1EE"
-                           VerticalOptions="StartAndExpand" />
                     <controls:ImageGalleryControl Grid.Row="0" ItemsSource="{Binding Images}">
                         <controls:ImageGalleryControl.ItemTemplate>
                             <DataTemplate>
@@ -191,20 +184,20 @@
                     <StackLayout Grid.Row="3" Grid.Column="1" Orientation="Horizontal" Spacing="0">
                         <Image Source="statusUnresolved.png" HorizontalOptions="Center"
                                VerticalOptions="Center" HeightRequest="40" Opacity="{Binding StatusUnresolvedOpacity}">
-                                <Image.GestureRecognizers>
+                            <Image.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding OnStatusClickedCommand}" CommandParameter="statusUnresolved.png"/>
-                                </Image.GestureRecognizers>
+                            </Image.GestureRecognizers>
                         </Image>
                     </StackLayout>
-                    
+
                     <StackLayout Grid.Row="3" Grid.Column="2" Orientation="Horizontal" Spacing="4">
                         <Image Source="statusInProgress.png" HorizontalOptions="Center" VerticalOptions="Center" HeightRequest="40" Opacity="{Binding StatusInProgressOpacity}">
-                        <Image.GestureRecognizers>
+                            <Image.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding OnStatusClickedCommand}" CommandParameter="statusInProgress.png"/>
                             </Image.GestureRecognizers>
                         </Image>
                     </StackLayout>
-                    
+
                     <StackLayout Grid.Row="3" Grid.Column="3" Orientation="Horizontal" Spacing="4">
                         <Image Source="statusDone.png" HorizontalOptions="Center" VerticalOptions="Center" HeightRequest="40" Opacity="{Binding StatusDoneOpacity}">
                             <Image.GestureRecognizers>
