Finalized the merge, images still not working. The ItemSourcechanged is not triggering in the control for the second method.

--- a/ASFT/ASFT/Pages/IssuePage.xaml
+++ b/ASFT/ASFT/Pages/IssuePage.xaml
@@ -73,8 +73,7 @@
                 <!--PictureGallery-->
                 <Label Text="IMAGES" HorizontalTextAlignment="Start" VerticalTextAlignment="Center"
                        Style="{StaticResource Labelfont}" TextColor="White" />
-                <Grid BindingContext="{Binding ImageGalleryViewModel}">
-
+                <Grid >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="128" />
                         <RowDefinition Height="*" />
