--- a/ASFT/ASFT/Pages/IssueListPage.xaml
+++ b/ASFT/ASFT/Pages/IssueListPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:ASFT.Converters;assembly=ASFT"
              xmlns:freshMvvm="clr-namespace:FreshMvvm;assembly=FreshMvvm"
-             xmlns:helperMethods="clr-namespace:ASFT.HelperMethods;assembly=ASFT"
+             xmlns:behaviors="clr-namespace:Xam.Behaviors;assembly=Xam.Behaviors"
              x:Class="ASFT.Pages.IssueListPage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -11,19 +11,27 @@
             <converters:DateTextConverter x:Key="DateToTextConverter" />
         </ResourceDictionary>
     </ContentPage.Resources>
-<ListView ItemsSource="{Binding Issues}" SeparatorColor="#444444" RowHeight="90" IsPullToRefreshEnabled="True" IsRefreshing="{Binding IsBusy}" RefreshCommand="{Binding PullRefreshCommand}" >
-        <ListView.Behaviors>
-        <helperMethods:EventToCommandBehavior EventName="ItemSelected" 
-                                          Command="{Binding OnSelectedIssueCommand}" 
-                                          Converter="{StaticResource SelectedItemConverter}" />
-        </ListView.Behaviors>
+    <ListView ItemsSource="{Binding Issues}" SeparatorColor="#444444" RowHeight="90" IsPullToRefreshEnabled="True" IsRefreshing="{Binding IsBusy}" RefreshCommand="{Binding PullRefreshCommand}" x:Name="Root" >
+
+        <behaviors:Interaction.Behaviors>
+            <behaviors:BehaviorCollection>
+                <behaviors:EventToCommand EventName="ItemSelected" Command="{Binding OnSelectedIssueCommand}" PassEventArgument="True"  />
+            </behaviors:BehaviorCollection>
+        </behaviors:Interaction.Behaviors>
+
+
         <ListView.ItemTemplate>
             <DataTemplate>
-                <ViewCell x:Name="Stalin">
+                <ViewCell>
                     <ViewCell.ContextActions>
-                        <MenuItem x:Name="Hitler" Command="{Binding Path=BindingContext.OnDelete, Source={}}" Text="Delete" IsDestructive="True" />
+                        <MenuItem>
+                            <behaviors:Interaction.Behaviors>
+                                <behaviors:BehaviorCollection>
+                                    <behaviors:EventToCommand EventName="Clicked" Command="{Binding Source={x:Reference Root}, Path=BindingContext.DeleteIssueCommand}"  PassEventArgument="True"  />
+                                </behaviors:BehaviorCollection>
+                            </behaviors:Interaction.Behaviors>
+                        </MenuItem>
                     </ViewCell.ContextActions>
-
                     <ViewCell.View>
                         <Grid>
                             <Grid.RowDefinitions>
